Added navigation bar and class selectors

--- a/index.html
+++ b/index.html
@@ -15,8 +15,20 @@
 </head>
 
 <body>
-
-  
+<div class="Navigationbar">
+  <h2>Fun Bus</h2>
+  <div class="Nav2">
+    <nav>
+      <div class="NavAnchors">
+        <a>Home</a>
+        <a>About Us</a>
+        <a>Blog</a>
+        <a>Contact</a>
+      </div>
+    </nav>
+  </div>
+</div>
+  <hr>
      
   <div class="container home">
    
