--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
 </head>
 
 <body>
-<div class="Navigationbar">
   <h2>Fun Bus</h2>
-  <div class="Nav2">
+<div class="navigationbar">
+    <div class="navtwo">
     <nav>
-      <div class="NavAnchors">
         <a>Home</a>
         <a>About Us</a>
         <a>Blog</a>
         <a>Contact</a>
-      </div>
     </nav>
   </div>
 </div>
