Added a class to the h2 above the navbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <h2>Fun Bus</h2>
+  <h2 class="headbus">Fun Bus</h2>
 <div class="navigationbar">
     <div class="navtwo">
     <nav>
