--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
   </div>
 </div>
   <hr>
-     
+
   <div class="container home">
+    <img class="funbusimg"src="img/fun-bus.jpg" alt="Fun Bus">
+    <div>
+      <h2>Welcome To Fun Bus!</h2>
+      <div>
+        <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+      </div>
+    </div>
+    <hr>
    
     <section class="content-section">
       <div class="text-content">
