--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-  <h2 class="headbus">Fun Bus</h2>
+  <div class="topbus">
+    <h2 class="headbus">Fun Bus</h2>
 <div class="navigationbar">
     <div class="navtwo">
     <nav>
@@ -25,6 +26,7 @@
         <a>Contact</a>
     </nav>
   </div>
+</div>
 </div>
   <hr>
 
